fixed overflow problem in code blocks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,9 @@ img {
   max-width:100%;
 }
 
+code{
+  white-space: pre-line;
+}
 
 /* shamelessly stolen off the internet from https://codepen.io/ynef/pen/yvvyGv */
 
